Release 23.7.3-RC2 - Holesky Hotfix (#5938)
* Revert "Burn in candidate for 23.7.3 (#5906)"

This reverts commit ed9d80e10e6c5a997e2b855660709de92f85c3db.

Signed-off-by: Simon Dudley <simon.dudley@consensys.net>

* Update holesky with fixed extraData, genesis time, shanghaiTime (#5890)

Signed-off-by: Simon Dudley <simon.dudley@consensys.net>

* 23.7.3-RC2 version bump and 23.7.2 release SHAs
Signed-off-by: Simon Dudley <simon.dudley@consensys.net>

* updated gradle verification metadata (#5870)

* removed old artefacts

* works with compileTestJava

* restored metadata needed for codeQL and trusted-artifacts block for javadoc/sources

Signed-off-by: Sally MacFarlane <macfarla.github@gmail.com>

---------

Signed-off-by: Sally MacFarlane <macfarla.github@gmail.com>

* Add rocksdbjni-8.0.0 gradle verification back in

Signed-off-by: Simon Dudley <simon.dudley@consensys.net>

---------

Signed-off-by: Simon Dudley <simon.dudley@consensys.net>
Signed-off-by: Sally MacFarlane <macfarla.github@gmail.com>
Co-authored-by: Sally MacFarlane <macfarla.github@gmail.com>